judger/judger_cpp/tmp/8a62d034-4cda-438f-ba75-7c60d6b58d30txt
c:\Users\haohan\Desktop\myoj\judger\judger_cpp\tmp\d9e2a2dd-51d2-4b0c-92c0-2a1897777829.cpp:1:1: error: 'ff' does not name a type
 ff
 ^
